remove expired_at from possible json for create_pair handler
