# api/api.yaml
@@ -127,12 +127,8 @@ definitions:
 
   createPairRequest:
     type: object
-    required: ['address', 'expired_at']
+    required: ['address']
     properties:
-      expired_at:
-        type: number
-        description: 'TX expire timestamp'
-        example: 1509559133
       address:
         type: string
         pattern: ^0x[0-9abcdefABCDEF]{40}$
