# fundingapi/schema/jsonschema.py
@@ -22,15 +22,9 @@ jsonschema = OrderedDict([('createPairResponse',
                                                         'd4171a66-af9f-493b-a4d7-dec0fc0c9e85')]))]))])),
              ('createPairRequest',
               OrderedDict([('type', 'object'),
-                           ('required', ['address', 'expired_at']),
+                           ('required', ['address']),
                            ('properties',
-                            OrderedDict([('expired_at',
-                                          OrderedDict([('type', 'number'),
-                                                       ('description',
-                                                        'TX expire timestamp'),
-                                                       ('example',
-                                                        1509559133)])),
-                                         ('address',
+                            OrderedDict([('address',
                                           OrderedDict([('type', 'string'),
                                                        ('pattern',
                                                         '^0x[0-9abcdefABCDEF]{40}$'),
